<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ShowActivityFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="212dp"
            android:text="@string/read_a_novel"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/suggestNewActivityBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suggest_new_activity"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/saveForLaterBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_activity_for_later"
            app:layout_constraintEnd_toEndOf="@+id/suggestNewActivityBtn"
            app:layout_constraintStart_toStartOf="@+id/suggestNewActivityBtn"
            app:layout_constraintTop_toBottomOf="@+id/suggestNewActivityBtn" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>