<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:background="@color/design_default_color_on_primary"
    >


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <TextView
        android:id="@+id/activityTypeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_of_activity"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline"
        app:layout_constraintTop_toBottomOf="@id/horizontalGuideline" />

    <Spinner
        android:id="@+id/activitySpinner"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textColor="@color/design_default_color_on_secondary"
        app:layout_constraintStart_toStartOf="@id/verticalGuideline"
        app:layout_constraintTop_toBottomOf="@+id/activityTypeTextView"
        tools:layout_editor_absoluteX="1dp" />

    <TextView
        android:id="@+id/accessibilityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accessibility"
        android:textSize="30sp"
        android:textColor="@color/design_default_color_on_secondary"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline"
        app:layout_constraintTop_toBottomOf="@id/activitySpinner" />

    <Spinner
        android:id="@+id/accessibilitySpinner"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="@id/verticalGuideline"
        app:layout_constraintTop_toBottomOf="@+id/accessibilityTextView"
        tools:layout_editor_absoluteX="1dp" />

    <TextView
        android:id="@+id/participantsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/participants"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline"
        app:layout_constraintTop_toBottomOf="@id/accessibilitySpinner" />

    <Spinner
        android:id="@+id/participantsSpinner"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="@id/verticalGuideline"
        app:layout_constraintTop_toBottomOf="@+id/participantsTextView"
        tools:layout_editor_absoluteX="1dp" />

    <TextView
        android:id="@+id/priceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textSize="30sp"
        android:textColor="@color/design_default_color_on_secondary"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline"
        app:layout_constraintTop_toBottomOf="@id/participantsSpinner" />

    <Spinner
        android:id="@+id/priceSpinner"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/verticalGuideline"
        app:layout_constraintTop_toBottomOf="@+id/priceTextView"
        tools:layout_editor_absoluteX="1dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tell_me_what_to_do"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceSpinner"
        app:layout_constraintVertical_bias="0.81" />


</androidx.constraintlayout.widget.ConstraintLayout>